// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompositeAuth render should correctly render CompositeAuth component 1`] = `
<v-frame-stub closable="true">
  <auth-form-stub inited="true"></auth-form-stub>
</v-frame-stub>
`;

exports[`CompositeAuth render should render auth form in other cases 1`] = `
<v-frame-stub closable="true">
  <auth-form-stub inited="true"></auth-form-stub>
</v-frame-stub>
`;

exports[`CompositeAuth render should render create account form if user authorized but does not have any account 1`] = `
<v-frame-stub closable="true">
  <create-account-form-stub></create-account-form-stub>
</v-frame-stub>
`;

exports[`CompositeAuth render should render message form if link sent but user is not authorized 1`] = `
<v-frame-stub closable="true">
  <message-form-stub message="An email with authorization link was sent on your address. Open it in the same browser to sign in. Also check spam folder and exclude Endpass from spam filters." closable="true"></message-form-stub>
</v-frame-stub>
`;
